[package]
name = "rproxy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.3", features = ["full"]}
tokio = { version = "1", features = ["full"]}
http-body-util = "0.1.0-rc.2"
log = "0.4.17"
env_logger = "0.10.0"
